--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "sourceMap": true,
     "target": "es5",
     "module": "es6",
+    "lib": ["dom", "es2015"],
     "moduleResolution": "node",
     "jsx": "react",
     "allowJs": true,
