--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
   "name": "thx-deep-note",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/lodash": "^4.14.117",
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "^16.0.9",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.9.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "typescript": "^3.1.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@types/lodash": "^4.14.182",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@types/webpack-env": "^1.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.14",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-refresh": "^0.13.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "stylelint": "^14.8.2",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "styles-loader": "^4.0.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "typescript-plugin-css-modules": "^3.4.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  },
+  "scripts": {
+    "eslint": "eslint --ext .ts,.tsx src",
+    "stylelint": "stylelint '**/*.scss'",
+    "build": "NODE_ENV=development webpack",
+    "dist": "NODE_ENV=production webpack",
+    "dev": "webpack serve",
+    "test": "jest"
   },
   "devDependencies": {}
 }
