--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-syntax-highlighter": "^15.5.1",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
@@ -20,7 +21,10 @@
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-input-range": "^1.3.0",
     "react-refresh": "^0.13.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "reset.css": "^2.0.2",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "stylelint": "^14.8.2",
